--- a/Sprout.Exam.DataAccess/Sprout.Exam.DataAccess.csproj
+++ b/Sprout.Exam.DataAccess/Sprout.Exam.DataAccess.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+<ItemGroup>
+	<ProjectReference Include="..\Sprout.Exam.Business\Sprout.Exam.Business.csproj" />
+	<ProjectReference Include="..\Sprout.Exam.DataAccess\Sprout.Exam.Business.csproj" />
+</ItemGroup>
 
 </Project>
