--- a/Sprout.Exam.DataAccess/Sprout.Exam.DataAccess.csproj
+++ b/Sprout.Exam.DataAccess/Sprout.Exam.DataAccess.csproj
@@ -4,9 +4,16 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+    <PackageReference Include="Microsoft.SqlServer.Server" Version="1.0.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
 <ItemGroup>
 	<ProjectReference Include="..\Sprout.Exam.Business\Sprout.Exam.Business.csproj" />
-	<ProjectReference Include="..\Sprout.Exam.DataAccess\Sprout.Exam.Business.csproj" />
 </ItemGroup>
 
 </Project>
