--- a/Sprout.Exam.Service/Sprout.Exam.Service.csproj
+++ b/Sprout.Exam.Service/Sprout.Exam.Service.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Sprout.Exam.Business\Sprout.Exam.Business.csproj" />
+    <ProjectReference Include="..\Sprout.Exam.DataAccess\Sprout.Exam.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
