--- a/Sprout.Exam.WebApp/Sprout.Exam.WebApp.csproj
+++ b/Sprout.Exam.WebApp/Sprout.Exam.WebApp.csproj
@@ -33,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Sprout.Exam.Business\Sprout.Exam.Business.csproj" />
+    <ProjectReference Include="..\Sprout.Exam.Service\Sprout.Exam.Service.csproj" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
